Add byte representation (fix jlc)